log/build_2022-11-24_12-11-07/mypkg/stderr.log
  File "/home/ochiai/ros2_ws/install/mypkg/lib/python3.6/site-packages/mypkg/listener.py", line 26
    break:
         ^
SyntaxError: invalid syntax

